{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 14,
  "lineage": "c5ba18c0-f1f4-ad8e-615d-e2849ad05db8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minecraft",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec10929233384c7f",
            "arn": "arn:aws:ec2:us-east-1:767398094872:instance/i-0858fde1893df7ff0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0858fde1893df7ff0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cs312-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e592b7bd69e73e3",
            "private_dns": "ip-10-0-1-94.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.94",
            "public_dns": "ec2-54-209-203-2.compute-1.amazonaws.com",
            "public_ip": "54.209.203.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d3ec7bd3cdcd7dcd",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0272ff9b03b0c18c5",
            "tags": {
              "Name": "cs312-minecraft-server"
            },
            "tags_all": {
              "Name": "cs312-minecraft-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05819d55dfc05bd61"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.minecraft",
            "aws_subnet.cs312_public",
            "aws_vpc.cs312"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cs312_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398094872:internet-gateway/igw-097bdcd9bbf9cf71a",
            "id": "igw-097bdcd9bbf9cf71a",
            "owner_id": "767398094872",
            "tags": {
              "Name": "cs312-igw"
            },
            "tags_all": {
              "Name": "cs312-igw"
            },
            "vpc_id": "vpc-05ab437f869b31d24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cs312"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cs312_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398094872:route-table/rtb-0641d416c380f3e5c",
            "id": "rtb-0641d416c380f3e5c",
            "owner_id": "767398094872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097bdcd9bbf9cf71a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cs312-public-rt"
            },
            "tags_all": {
              "Name": "cs312-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab437f869b31d24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cs312_igw",
            "aws_vpc.cs312"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cs312_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03745300b5cb9c200",
            "route_table_id": "rtb-0641d416c380f3e5c",
            "subnet_id": "subnet-0272ff9b03b0c18c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cs312_igw",
            "aws_route_table.cs312_public_rt",
            "aws_subnet.cs312_public",
            "aws_vpc.cs312"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "minecraft",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398094872:security-group/sg-05819d55dfc05bd61",
            "description": "Minecraft server: SSH for admin, TCP 25565 for clients",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05819d55dfc05bd61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Minecraft clients",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH admin access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cs312-minecraft-sg",
            "name_prefix": "",
            "owner_id": "767398094872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cs312-minecraft-sg"
            },
            "tags_all": {
              "Name": "cs312-minecraft-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab437f869b31d24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cs312"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cs312_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398094872:subnet/subnet-0272ff9b03b0c18c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0272ff9b03b0c18c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398094872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs312-public-subnet"
            },
            "tags_all": {
              "Name": "cs312-public-subnet"
            },
            "vpc_id": "vpc-05ab437f869b31d24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cs312"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cs312",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398094872:vpc/vpc-05ab437f869b31d24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02195dcc75c171b01",
            "default_route_table_id": "rtb-002741d5555c96fbe",
            "default_security_group_id": "sg-082dfc17e114a6ee5",
            "dhcp_options_id": "dopt-0f44480ddb4cf9465",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ab437f869b31d24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002741d5555c96fbe",
            "owner_id": "767398094872",
            "tags": {
              "Name": "cs312-vpc"
            },
            "tags_all": {
              "Name": "cs312-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}